@@ -20,10 +20,10 @@ import com.djrapitops.plan.api.exceptions.PassEncryptException;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 
 /**
  * Password Encryption utility.
@@ -31,7 +31,6 @@ import java.security.spec.InvalidKeySpecException;
  * https://github.com/defuse/password-hashing/blob/master/PasswordStorage.java
  *
  * @author Defuse
- * @since 3.5.2
  */
 public class PassEncryptUtil {
 
@@ -177,11 +176,11 @@ public class PassEncryptUtil {
     }
 
     private static byte[] fromBase64(String hex) {
-        return DatatypeConverter.parseBase64Binary(hex);
+        return Base64.getDecoder().decode(hex);
     }
 
     private static String toBase64(byte[] array) {
-        return DatatypeConverter.printBase64Binary(array);
+        return Base64.getEncoder().encodeToString(array);
     }
 
     @SuppressWarnings("serial")
